--- a/templates/accordion.html
+++ b/templates/accordion.html
@@ -1,49 +1,64 @@
-<div class="flex flex-col" _="install AccordionClick">
-    <div class="my-2 dark:bg-gray-800 shadow-lg dark:shadow-gray-800 acc-header selected">
-        <div class="flex flex-row justify-between items-center font-semibold p-3 cursor-pointer">
-            <span>View 1</span>
-            {% include 'icons/chevron_down.html' %}
-        </div>
-        <div class="dark:bg-gray-800 acc-content px-8 overflow-hidden h-0 ease duration-500">
-            <div hx-get="{% url 'view1' %}" hx-trigger="load" hx-swap="outerHTML" class="pb-8">
-                Loading View 1
-            </div>
+<div class="flex flex-col" _="install Accordion">
+    <div class="rotate-180" hidden></div>
+    <div role="heading" class="mt-4 dark:bg-gray-800 shadow-lg dark:shadow-gray-800"
+         hx-get="{% url 'view1' %}" hx-trigger="load" hx-target="#content-1" hx-swap="innerHTML">
+        <button id="acc-1" class="w-full flex flex-row justify-between items-center font-semibold p-3 cursor-pointer"
+                aria-controls="content-1" aria-expanded="true">
+            <span>View 1</span>{% include 'icons/chevron_down.html' %}
+        </button>
+    </div>
+    <div id="content-1"
+         class="dark:bg-gray-800 px-8 overflow-hidden h-0 shadow-lg dark:shadow-gray-800" role="region"
+         aria-labelledby="acc-1">
+        <div class="pb-8">
+            Loading View 1
         </div>
     </div>
 
-    <div class="my-2 dark:bg-gray-800 shadow-lg dark:shadow-gray-800 acc-header">
-        <div class="flex flex-row justify-between items-center font-semibold p-3 cursor-pointer">
+    <div role="heading" class="mt-4 dark:bg-gray-800 shadow-lg dark:shadow-gray-800"
+         hx-get="{% url 'view2' %}" hx-trigger="load" hx-target="#content-2" hx-swap="innerHTML">
+        <button id="acc-2" class="w-full flex flex-row justify-between items-center font-semibold p-3 cursor-pointer"
+                aria-controls="content-2" aria-expanded="false">
             <span>View 2</span>
             {% include 'icons/chevron_down.html' %}
-        </div>
-        <div class="dark:bg-gray-800 acc-content px-8 overflow-hidden h-0 ease duration-500">
-            <div hx-get="{% url 'view2' %}" hx-trigger="load" hx-swap="outerHTML" class="pb-8">
-                Loading View 2
-            </div>
+        </button>
+    </div>
+    <div id="content-2"
+         class="dark:bg-gray-800 px-8 overflow-hidden h-0 shadow-lg dark:shadow-gray-800" role="region"
+         aria-labelledby="acc-2" hidden>
+        <div class="pb-8">
+            Loading View 2
         </div>
     </div>
 
-    <div class="my-2 dark:bg-gray-800 shadow-lg dark:shadow-gray-800 acc-header">
-        <div class="flex flex-row justify-between items-center font-semibold p-3 cursor-pointer">
+    <div role="heading" class="mt-4 dark:bg-gray-800 shadow-lg dark:shadow-gray-800"
+         hx-get="{% url 'view4' %}" hx-trigger="select" hx-target="#content-3" hx-swap="innerHTML">
+        <button id="acc-3" class="w-full flex flex-row justify-between items-center font-semibold p-3 cursor-pointer"
+                aria-controls="content-3" aria-expanded="false">
             <span>View 3</span>
             {% include 'icons/chevron_down.html' %}
-        </div>
-        <div class="dark:bg-gray-800 acc-content px-8 overflow-hidden h-0 ease duration-500">
-            <div hx-get="{% url 'view3' %}" hx-trigger="click from:closest .acc-header">
-                Loading View 3
-            </div>
+        </button>
+    </div>
+    <div id="content-3"
+         class="dark:bg-gray-800 px-8 overflow-hidden h-0 shadow-lg dark:shadow-gray-800" role="region"
+         aria-labelledby="acc-3" hidden>
+        <div class="pb-8">
+            Loading View 3
         </div>
     </div>
 
-    <div class="my-2 dark:bg-gray-800 shadow-lg dark:shadow-gray-800 acc-header">
-        <div class="flex flex-row justify-between items-center font-semibold p-3 cursor-pointer">
-            <span>View 4</span>
-            {% include 'icons/chevron_down.html' %}
-        </div>
-        <div class="dark:bg-gray-800 acc-content px-8 overflow-hidden h-0 ease duration-500">
-            <div hx-get="{% url 'view4' %}" hx-trigger="click from:closest .acc-header" hx-swap="outerHTML" class="pb-8">
-                Loading View 4
-            </div>
+    <div role="heading" class="mt-4 dark:bg-gray-800 shadow-lg dark:shadow-gray-800"
+         hx-get="{% url 'view4' %}" hx-trigger="mousedown, touchstart" hx-target="#content-4" hx-swap="innerHTML">
+        <button id="acc-4" class="w-full flex flex-row justify-between items-center font-semibold p-3 cursor-pointer" aria-controls="content-4" aria-expanded="false">
+            <span>View 4{% include 'icons/chevron_down.html' %}</span>
+        </button>
+    </div>
+    <div id="content-4"
+         class="dark:bg-gray-800 px-8 overflow-hidden h-0 shadow-lg dark:shadow-gray-800" role="region"
+         aria-labelledby="acc-4" hidden>
+        <div class="pb-8">
+            Loading View 4
         </div>
     </div>
+
 </div>
